Testing setup for optuna

--- a/Machine Unlearning Proposal.ipynb
+++ b/Machine Unlearning Proposal.ipynb
@@ -5,7 +5,9 @@
    "id": "9584dc74",
    "metadata": {},
    "source": [
-    "# Machine Unlearning"
+    "# Machine Unlearning + Noise Generator\n",
+    "\n",
+    "This is a copy of the original `Machine Unlearning.ipynb` notebook, with the key difference of using a different way of generating the noise."
    ]
   },
   {
@@ -13,23 +15,13 @@
    "execution_count": 1,
    "id": "4e828435",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x1b1ab198150>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import required libraries\n",
     "import numpy as np\n",
     "import tarfile\n",
     "import os\n",
+    "import math\n",
     "\n",
     "import torch\n",
     "from torch import nn\n",
@@ -41,7 +33,6 @@
     "from torchvision.models import resnet18\n",
     "\n",
     "torch.manual_seed(100)\n",
-    "\n",
     "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\""
    ]
   },
@@ -408,20 +399,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4696560",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4d212fd",
+   "metadata": {},
+   "source": [
+    "Originally used:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "96f88a4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# defining the noise structure\n",
-    "class Noise(nn.Module):\n",
-    "    def __init__(self, *dim):\n",
-    "        super().__init__()\n",
-    "        self.noise = torch.nn.Parameter(torch.randn(*dim), requires_grad = True)\n",
+    "# # defining the noise structure\n",
+    "# class Noise(nn.Module):\n",
+    "#     def __init__(self, *dim):\n",
+    "#         super().__init__()\n",
+    "#         self.noise = torch.nn.Parameter(torch.randn(*dim), requires_grad = True)\n",
     "        \n",
+    "#     def forward(self):\n",
+    "#         return self.noise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c939dd9",
+   "metadata": {},
+   "source": [
+    "Trying a different approach:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "287dac3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NoiseGenerator(nn.Module):\n",
+    "    \"\"\"\n",
+    "    A neural network module for generating noise patterns\n",
+    "    through a series of fully connected layers.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "            self, \n",
+    "            dim_out: list,\n",
+    "            dim_hidden: list = [1000],\n",
+    "            dim_start: int = 100,\n",
+    "            ):\n",
+    "        \"\"\"\n",
+    "        Initialize the NoiseGenerator.\n",
+    "\n",
+    "        Parameters:\n",
+    "            dim_out (list): The output dimensions for the generated noise.\n",
+    "            dim_hidden (list): The dimensions of hidden layers, defaults to [1000].\n",
+    "            dim_start (int): The initial dimension of random noise, defaults to 100.\n",
+    "        \"\"\"\n",
+    "        super().__init__()\n",
+    "        self.dim = dim_out\n",
+    "        self.start_dims = dim_start  # Initial dimension of random noise\n",
+    "\n",
+    "        # Define fully connected layers\n",
+    "        self.layers = {}\n",
+    "        self.layers[\"l1\"] = nn.Linear(self.start_dims, dim_hidden[0])\n",
+    "        last = dim_hidden[0]\n",
+    "        for idx in range(len(dim_hidden)-1):\n",
+    "            self.layers[f\"l{idx+2}\"] = nn.Linear(dim_hidden[idx], dim_hidden[idx+1])\n",
+    "            last = dim_hidden[idx+1]\n",
+    "\n",
+    "        # Define output layer\n",
+    "        self.f_out = nn.Linear(last, math.prod(self.dim))        \n",
+    "\n",
     "    def forward(self):\n",
-    "        return self.noise"
+    "        \"\"\"\n",
+    "        Forward pass to transform random noise into structured output.\n",
+    "\n",
+    "        Returns:\n",
+    "            torch.Tensor: The reshaped tensor with specified output dimensions.\n",
+    "        \"\"\"\n",
+    "        # Generate random starting noise\n",
+    "        x = torch.randn(self.start_dims)\n",
+    "        x = x.flatten()\n",
+    "\n",
+    "        # Transform noise into learnable patterns\n",
+    "        for layer in self.layers.keys():\n",
+    "            x = self.layers[layer](x)\n",
+    "            x = torch.relu(x)\n",
+    "\n",
+    "        # Apply output layer\n",
+    "        x = self.f_out(x)\n",
+    "\n",
+    "        # Reshape tensor to the specified dimensions\n",
+    "        reshaped_tensor = x.view(self.dim)\n",
+    "        return reshaped_tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eff85afe",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
