--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -21,15 +21,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.fyemu_tunable import main\n",
+    "import torch\n",
+    "import os\n",
+    "import torchvision.transforms as tt\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision.datasets import ImageFolder\n",
+    "import optuna\n",
+    "from torchvision.models import resnet18\n",
+    "\n",
+    "from src.metrics import kl_divergence_between_models\n",
+    "\n",
+    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "n0 = 5000\n",
     "n2 = 5000\n",
-    "batch_size = 4\n"
+    "batch_size = 4\n",
+    "data_dir = f'data{os.sep}cifar10'\n",
+    "\n",
+    "transform_test = tt.Compose([\n",
+    "    tt.ToTensor(),\n",
+    "    tt.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
+    "])\n",
+    "\n",
+    "valid_ds = ImageFolder(data_dir+f'{os.sep}test', transform_test)\n",
+    "valid_dl = DataLoader(valid_ds, batch_size*2,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def objective(trial):\n",
+    "\n",
+    "    global valid_dl\n",
+    "\n",
+    "    opt_Epochs = trial.suggest_int('opt_Epochs', 1, 10)\n",
+    "    opt_Steps = trial.suggest_int('opt_Steps', 1, 10)\n",
+    "    opt_Learning_Rate = trial.suggest('opt_Learning_Rate', 0.01, 0.3)\n",
+    "    opt_Batch_Size = trial.suggest('opt_Batch_Size', 1, 64)\n",
+    "    opt_Number_of_Noise_Batches = trial.suggest_int('opt_Number_of_Noise_Batches', 1, 10)\n",
+    "    opt_Regularization_term = trial.suggest('opt_Regularization_term', 0.01, 0.3)\n",
+    "    opt_Layers = trial.suggest_int('opt_Layers', 1, 10)\n",
+    "    opt_Noise_Dim = trial.suggest_int('opt_Noise_Dim', 1, 1000)\n",
+    "\n",
+    "    mod, histo = main(\n",
+    "        t_Epochs = opt_Epochs,\n",
+    "        t_Steps= opt_Steps,\n",
+    "        t_Learning_Rate = opt_Learning_Rate,\n",
+    "        t_Batch_Size = opt_Batch_Size,\n",
+    "        t_Number_of_Noise_Batches = opt_Number_of_Noise_Batches,\n",
+    "        t_Regularization_term = opt_Regularization_term,\n",
+    "        t_Layers = [opt_Layers],\n",
+    "        t_Noise_Dim = opt_Noise_Dim,\n",
+    "        new_baseline=True,\n",
+    "        logs=True,\n",
+    "    )\n",
+    "\n",
+    "    exact = resnet18(num_classes = 10).to(DEVICE)\n",
+    "    exact.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\", weights_only=True))\n",
+    "    div = kl_divergence_between_models(\n",
+    "        model1 = mod,\n",
+    "        model2 = exact,\n",
+    "        data_loader = valid_dl,\n",
+    "    )\n",
+    "\n",
+    "    return div"
    ]
   },
   {
@@ -88,7 +152,7 @@
     }
    ],
    "source": [
-    "a = main(\n",
+    "standard_model, standard_history = main(\n",
     "    t_Epochs = 5,\n",
     "    t_Steps= int((n0 + n2)/(2 * batch_size)), # The Idea is to have the same amount of updates as their are samples to unlearn\n",
     "    t_Learning_Rate = 0.1,\n",
@@ -141,46 +205,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50000"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train_ds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('data\\\\cifar10\\\\train\\\\truck\\\\5000.png', 9)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_ds.imgs[49999]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -223,66 +247,6 @@
     "\n",
     "rt_tr_dl = DataLoader(rt_tr, batch_size, shuffle=True)\n",
     "rt_vl_dl = DataLoader(rt_vl, batch_size*2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([3, 32, 32])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rt_tr.__getitem__(0)[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5000.0"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rt_tr.__len__() / batch_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5000"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(rt_tr_dl)"
    ]
   },
   {
