--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -36,25 +36,103 @@
     "\n",
     "from src.metrics import kl_divergence_between_models\n",
     "\n",
-    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.fyemu_tunable import *\n",
     "\n",
-    "n0 = 5000\n",
-    "n2 = 5000\n",
-    "batch_size = 128\n",
+    "batch_size = 256\n",
+    "classes_to_forget = [0, 2]\n",
+    "classes = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "num_batches = 2\n",
     "data_dir = f'data{os.sep}cifar10'\n",
     "\n",
     "transform_test = tt.Compose([\n",
     "    tt.ToTensor(),\n",
     "    tt.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
+    "train_ds = ImageFolder(data_dir+f'{os.sep}test', transform_test)\n",
     "\n",
-    "valid_ds = ImageFolder(data_dir+f'{os.sep}test', transform_test)\n",
-    "valid_dl = DataLoader(valid_ds, batch_size*2,)"
+    "num_classes = 10\n",
+    "\n",
+    "classwise_train = {}\n",
+    "for i in range(num_classes):\n",
+    "    classwise_train[i] = []\n",
+    "\n",
+    "for img_path, label in train_ds.imgs:\n",
+    "    classwise_train[label].append((img_path, label))\n",
+    "\n",
+    "num_samples_per_class = 1000\n",
+    "retain_samples = {}\n",
+    "for i in range(len(classes)):\n",
+    "    if classes[i] not in classes_to_forget:\n",
+    "        retain_samples[len(retain_samples)] = classwise_train[i][:num_samples_per_class]\n",
+    "\n",
+    "other_samples = {}\n",
+    "for i in range(len(retain_samples)):\n",
+    "    for j in range(len(retain_samples[i])):\n",
+    "        other_samples[len(other_samples)] = retain_samples[i][j]\n",
+    "\n",
+    "noises = {k: NoiseGenerator((batch_size, 3, 32, 32), [100], 100) for k in classes_to_forget}\n",
+    "\n",
+    "noisy_data = FeatureMU_Loader(\n",
+    "    noisies=[\n",
+    "        {\"gen\": noises[cls], \"label\": torch.tensor(cls), \"n\": num_batches * batch_size} for cls in classes_to_forget\n",
+    "    ],\n",
+    "    retain_data=other_samples,\n",
+    "    transform=transform_test,\n",
+    ")\n",
+    "noisy_loader = torch.utils.data.DataLoader(noisy_data, batch_size=batch_size, shuffle = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noisy_loader.dataset.__len__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for b in noisy_loader:\n",
+    "    aa = b\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# count the number 0 in the list aa[1]\n",
+    "sum(aa[1] == 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,24 +144,27 @@
     "    opt_Epochs = trial.suggest_int('opt_Epochs', 1, 10)\n",
     "    opt_Steps = trial.suggest_int('opt_Steps', 1, 10)\n",
     "    opt_Learning_Rate = trial.suggest_float('opt_Learning_Rate', 0.01, 0.3)\n",
-    "    opt_Batch_Size = trial.suggest_int('opt_Batch_Size', 1, 64)\n",
+    "    opt_Batch_Size = trial.suggest_int('opt_Batch_Size', 32, 256)\n",
     "    opt_Number_of_Noise_Batches = trial.suggest_int('opt_Number_of_Noise_Batches', 1, 10)\n",
     "    opt_Regularization_term = trial.suggest_float('opt_Regularization_term', 0.01, 0.3)\n",
-    "    opt_Noise_Dim = trial.suggest_int('opt_Noise_Dim', 1, 1000)\n",
+    "    opt_Noise_Dim = trial.suggest_int('opt_Noise_Dim', 1, 512)\n",
     "\n",
-    "    l1 = trial.suggest_int('l1', 50, 1000000)\n",
-    "    l2 = trial.suggest_int('l2', 50, 1000000)\n",
-    "    l3 = trial.suggest_int('l3', 50, 1000000)\n",
-    "    l4 = trial.suggest_int('l4', 50, 1000000)\n",
-    "    l5 = trial.suggest_int('l5', 50, 1000000)\n",
-    "    l6 = trial.suggest_int('l6', 50, 1000000)\n",
-    "    l7 = trial.suggest_int('l7', 50, 1000000)\n",
-    "    l8 = trial.suggest_int('l8', 50, 1000000)\n",
-    "    l9 = trial.suggest_int('l9', 50, 1000000)\n",
+    "    print(f\"Epochs: {opt_Epochs} |\\nSteps: {opt_Steps} |\\nLearning Rate: {opt_Learning_Rate} |\\nBatch Size: {opt_Batch_Size} |\\nNoise Batches: {opt_Number_of_Noise_Batches} |\\nRegularization Term: {opt_Regularization_term} |\\nNoise Dim: {opt_Noise_Dim}\")\n",
+    "\n",
+    "    l1 = trial.suggest_int('l1', 32, 1024)\n",
+    "    l2 = trial.suggest_int('l2', 32, 1024)\n",
+    "    l3 = trial.suggest_int('l3', 32, 1024)\n",
+    "    l4 = trial.suggest_int('l4', 32, 1024)\n",
+    "    l5 = trial.suggest_int('l5', 32, 1024)\n",
+    "    l6 = trial.suggest_int('l6', 32, 1024)\n",
+    "    l7 = trial.suggest_int('l7', 32, 1024)\n",
+    "    l8 = trial.suggest_int('l8', 32, 1024)\n",
+    "    l9 = trial.suggest_int('l9', 32, 1024)\n",
     "    n_layers = trial.suggest_int('n_layers', 1, 9)\n",
     "\n",
     "    Layers = [l1, l2, l3, l4, l5, l6, l7, l8, l9]\n",
-    "    Layers = Layers[:n_layers]\n",
+    "    Layers = Layers[:1]\n",
+    "    print(\"Layers: \", Layers)\n",
     "\n",
     "    mod, histo = main(\n",
     "        t_Epochs = opt_Epochs,\n",
@@ -96,7 +177,18 @@
     "        t_Noise_Dim = opt_Noise_Dim,\n",
     "        new_baseline=False,\n",
     "        logs=True,\n",
+    "        model_eval_logs=False,\n",
     "    )\n",
+    "    \n",
+    "    data_dir = f'data{os.sep}cifar10'\n",
+    "\n",
+    "    transform_test = tt.Compose([\n",
+    "        tt.ToTensor(),\n",
+    "        tt.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
+    "    ])\n",
+    "\n",
+    "    valid_ds = ImageFolder(data_dir+f'{os.sep}test', transform_test)\n",
+    "    valid_dl = DataLoader(valid_ds, 256,)\n",
     "\n",
     "    exact = resnet18(num_classes = 10).to(DEVICE)\n",
     "    exact.load_state_dict(torch.load(\"ResNET18_CIFAR10_RETAIN_CLASSES.pt\", weights_only=True))\n",
@@ -115,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study()\n",
+    "study = optuna.create_study(study_name=\"GeneratorOpti\")\n",
     "study.optimize(objective, n_trials=5)\n",
     "\n",
     "study.best_params"
@@ -136,6 +228,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n0 = 5000\n",
+    "n2 = 5000\n",
+    "batch_size = 128\n",
+    "\n",
     "standard_model, standard_history = main(\n",
     "    t_Epochs = 5,\n",
     "    t_Steps= int((n0 + n2)/(2 * batch_size)), # The Idea is to have the same amount of updates as their are samples to unlearn\n",
