Test Run Finished

--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,98 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.fyemu_tunable import *\n",
-    "\n",
-    "batch_size = 256\n",
-    "classes_to_forget = [0, 2]\n",
-    "classes = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-    "num_batches = 2\n",
-    "data_dir = f'data{os.sep}cifar10'\n",
-    "\n",
-    "transform_test = tt.Compose([\n",
-    "    tt.ToTensor(),\n",
-    "    tt.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
-    "])\n",
-    "train_ds = ImageFolder(data_dir+f'{os.sep}test', transform_test)\n",
-    "\n",
-    "num_classes = 10\n",
-    "\n",
-    "classwise_train = {}\n",
-    "for i in range(num_classes):\n",
-    "    classwise_train[i] = []\n",
-    "\n",
-    "for img_path, label in train_ds.imgs:\n",
-    "    classwise_train[label].append((img_path, label))\n",
-    "\n",
-    "num_samples_per_class = 1000\n",
-    "retain_samples = {}\n",
-    "for i in range(len(classes)):\n",
-    "    if classes[i] not in classes_to_forget:\n",
-    "        retain_samples[len(retain_samples)] = classwise_train[i][:num_samples_per_class]\n",
-    "\n",
-    "other_samples = {}\n",
-    "for i in range(len(retain_samples)):\n",
-    "    for j in range(len(retain_samples[i])):\n",
-    "        other_samples[len(other_samples)] = retain_samples[i][j]\n",
-    "\n",
-    "noises = {k: NoiseGenerator((batch_size, 3, 32, 32), [100], 100) for k in classes_to_forget}\n",
-    "\n",
-    "noisy_data = FeatureMU_Loader(\n",
-    "    noisies=[\n",
-    "        {\"gen\": noises[cls], \"label\": torch.tensor(cls), \"n\": num_batches * batch_size} for cls in classes_to_forget\n",
-    "    ],\n",
-    "    retain_data=other_samples,\n",
-    "    transform=transform_test,\n",
-    ")\n",
-    "noisy_loader = torch.utils.data.DataLoader(noisy_data, batch_size=batch_size, shuffle = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noisy_loader.dataset.__len__()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for b in noisy_loader:\n",
-    "    aa = b\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# count the number 0 in the list aa[1]\n",
-    "sum(aa[1] == 0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aa[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +75,7 @@
     "    Layers = Layers[:1]\n",
     "    print(\"Layers: \", Layers)\n",
     "\n",
-    "    mod, histo = main(\n",
+    "    mod = main(\n",
     "        t_Epochs = opt_Epochs,\n",
     "        t_Steps= opt_Steps,\n",
     "        t_Learning_Rate = opt_Learning_Rate,\n",
@@ -203,9 +112,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-01-07 16:31:16,335] A new study created in memory with name: GeneratorOpti\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: 10 |\n",
+      "Steps: 5 |\n",
+      "Learning Rate: 0.11465825454369884 |\n",
+      "Batch Size: 51 |\n",
+      "Noise Batches: 9 |\n",
+      "Regularization Term: 0.06553558993493315 |\n",
+      "Noise Dim: 329\n",
+      "Layers:  [477]\n",
+      "['test', 'train']\n",
+      "['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+      "---Optimizing noise generator---\n",
+      "Optiming loss for class 0\n",
+      "Loss: 2694.703125\n",
+      "Loss: 9083.310546875\n",
+      "Loss: 20814.56640625\n",
+      "Loss: 6954.4912109375\n",
+      "Loss: 13898.6142578125\n",
+      "Loss: 4336.4326171875\n",
+      "Loss: 10435.720703125\n",
+      "Loss: 6321.22509765625\n",
+      "Loss: 4027.041748046875\n",
+      "Loss: 9768.16015625\n",
+      "Optiming loss for class 2\n",
+      "Loss: 3541.98095703125\n",
+      "Loss: 3303.551513671875\n",
+      "Loss: 4005.630126953125\n",
+      "Loss: 3512.423828125\n",
+      "Loss: 5116.18359375\n",
+      "Loss: 11598.4462890625\n",
+      "Loss: 17252.89453125\n",
+      "Loss: 7855.1533203125\n",
+      "Loss: 9938.1123046875\n",
+      "Loss: 11286.79296875\n",
+      "---Impairing Phase---\n",
+      "Train loss 1: 0.26202718601584435,Train Acc:8.0%\n",
+      "---Repairing Phase---\n",
+      "Train loss 1: 0.16379446777701379,Train Acc:10.128%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-01-07 16:40:33,669] Trial 0 finished with value: 0.9663974999999996 and parameters: {'opt_Epochs': 10, 'opt_Steps': 5, 'opt_Learning_Rate': 0.11465825454369884, 'opt_Batch_Size': 51, 'opt_Number_of_Noise_Batches': 9, 'opt_Regularization_term': 0.06553558993493315, 'opt_Noise_Dim': 329, 'l1': 477, 'l2': 820, 'l3': 925, 'l4': 140, 'l5': 980, 'l6': 294, 'l7': 130, 'l8': 535, 'l9': 411, 'n_layers': 3}. Best is trial 0 with value: 0.9663974999999996.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: 4 |\n",
+      "Steps: 7 |\n",
+      "Learning Rate: 0.20207056383994298 |\n",
+      "Batch Size: 94 |\n",
+      "Noise Batches: 8 |\n",
+      "Regularization Term: 0.20960383025524518 |\n",
+      "Noise Dim: 472\n",
+      "Layers:  [387]\n",
+      "['test', 'train']\n",
+      "['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+      "---Optimizing noise generator---\n",
+      "Optiming loss for class 0\n",
+      "Loss: 26018.478515625\n",
+      "Loss: 13825.0205078125\n",
+      "Loss: 18879.162109375\n",
+      "Loss: 21198.26171875\n",
+      "Optiming loss for class 2\n",
+      "Loss: 14665.984375\n",
+      "Loss: 60268.03515625\n",
+      "Loss: 29081.982421875\n",
+      "Loss: 57865.5390625\n",
+      "---Impairing Phase---\n",
+      "Train loss 1: 0.27501997631788255,Train Acc:8.838%\n",
+      "---Repairing Phase---\n",
+      "Train loss 1: 0.16986289055585863,Train Acc:9.86%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-01-07 17:21:20,963] Trial 1 finished with value: 0.9721624999999997 and parameters: {'opt_Epochs': 4, 'opt_Steps': 7, 'opt_Learning_Rate': 0.20207056383994298, 'opt_Batch_Size': 94, 'opt_Number_of_Noise_Batches': 8, 'opt_Regularization_term': 0.20960383025524518, 'opt_Noise_Dim': 472, 'l1': 387, 'l2': 640, 'l3': 483, 'l4': 810, 'l5': 116, 'l6': 643, 'l7': 855, 'l8': 847, 'l9': 104, 'n_layers': 4}. Best is trial 0 with value: 0.9663974999999996.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: 1 |\n",
+      "Steps: 6 |\n",
+      "Learning Rate: 0.01756754949978878 |\n",
+      "Batch Size: 242 |\n",
+      "Noise Batches: 9 |\n",
+      "Regularization Term: 0.060799441872320475 |\n",
+      "Noise Dim: 217\n",
+      "Layers:  [618]\n",
+      "['test', 'train']\n",
+      "['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+      "---Optimizing noise generator---\n",
+      "Optiming loss for class 0\n",
+      "Loss: 188.98255920410156\n",
+      "Optiming loss for class 2\n",
+      "Loss: 262.0127258300781\n",
+      "---Impairing Phase---\n",
+      "Train loss 1: 0.2305739527630806,Train Acc:16.452%\n",
+      "---Repairing Phase---\n",
+      "Train loss 1: 0.1238517887210846,Train Acc:11.888%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-01-07 18:56:08,945] Trial 2 finished with value: 0.8117300000000001 and parameters: {'opt_Epochs': 1, 'opt_Steps': 6, 'opt_Learning_Rate': 0.01756754949978878, 'opt_Batch_Size': 242, 'opt_Number_of_Noise_Batches': 9, 'opt_Regularization_term': 0.060799441872320475, 'opt_Noise_Dim': 217, 'l1': 618, 'l2': 150, 'l3': 962, 'l4': 1000, 'l5': 547, 'l6': 432, 'l7': 75, 'l8': 768, 'l9': 772, 'n_layers': 4}. Best is trial 2 with value: 0.8117300000000001.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: 8 |\n",
+      "Steps: 2 |\n",
+      "Learning Rate: 0.13472848683720162 |\n",
+      "Batch Size: 73 |\n",
+      "Noise Batches: 10 |\n",
+      "Regularization Term: 0.24240655504737732 |\n",
+      "Noise Dim: 386\n",
+      "Layers:  [370]\n",
+      "['test', 'train']\n",
+      "['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+      "---Optimizing noise generator---\n",
+      "Optiming loss for class 0\n",
+      "Loss: 11941.9521484375\n",
+      "Loss: 6315.853515625\n",
+      "Loss: 27457.3203125\n",
+      "Loss: 406.1610107421875\n",
+      "Loss: 11354.96484375\n",
+      "Loss: 2388.40625\n",
+      "Loss: 27567.55078125\n",
+      "Loss: 2804.00048828125\n",
+      "Optiming loss for class 2\n",
+      "Loss: 9550.390625\n",
+      "Loss: 12710.7119140625\n",
+      "Loss: 14950.0166015625\n",
+      "Loss: 61792.27734375\n",
+      "Loss: 17384.671875\n",
+      "Loss: 14655.3203125\n",
+      "Loss: 35956.27734375\n",
+      "Loss: 12491.017578125\n",
+      "---Impairing Phase---\n",
+      "Train loss 1: 0.23237045771837234,Train Acc:10.52%\n",
+      "---Repairing Phase---\n",
+      "Train loss 1: 0.13987509068131446,Train Acc:10.958%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-01-07 19:05:00,424] Trial 3 finished with value: 0.889345 and parameters: {'opt_Epochs': 8, 'opt_Steps': 2, 'opt_Learning_Rate': 0.13472848683720162, 'opt_Batch_Size': 73, 'opt_Number_of_Noise_Batches': 10, 'opt_Regularization_term': 0.24240655504737732, 'opt_Noise_Dim': 386, 'l1': 370, 'l2': 880, 'l3': 452, 'l4': 738, 'l5': 548, 'l6': 932, 'l7': 911, 'l8': 548, 'l9': 852, 'n_layers': 1}. Best is trial 2 with value: 0.8117300000000001.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: 3 |\n",
+      "Steps: 4 |\n",
+      "Learning Rate: 0.15256516910032245 |\n",
+      "Batch Size: 184 |\n",
+      "Noise Batches: 4 |\n",
+      "Regularization Term: 0.23334428810975033 |\n",
+      "Noise Dim: 198\n",
+      "Layers:  [355]\n",
+      "['test', 'train']\n",
+      "['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+      "---Optimizing noise generator---\n",
+      "Optiming loss for class 0\n",
+      "Loss: 11969.7744140625\n",
+      "Loss: 44739.9453125\n",
+      "Loss: 20514.64453125\n",
+      "Optiming loss for class 2\n",
+      "Loss: 8946.8994140625\n",
+      "Loss: 18545.568359375\n",
+      "Loss: 14834.4599609375\n",
+      "---Impairing Phase---\n",
+      "Train loss 1: 0.2647082072353363,Train Acc:9.782%\n",
+      "---Repairing Phase---\n",
+      "Train loss 1: 0.17230711503982543,Train Acc:10.112%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-01-07 19:18:45,765] Trial 4 finished with value: 0.9220874999999998 and parameters: {'opt_Epochs': 3, 'opt_Steps': 4, 'opt_Learning_Rate': 0.15256516910032245, 'opt_Batch_Size': 184, 'opt_Number_of_Noise_Batches': 4, 'opt_Regularization_term': 0.23334428810975033, 'opt_Noise_Dim': 198, 'l1': 355, 'l2': 1000, 'l3': 187, 'l4': 198, 'l5': 390, 'l6': 89, 'l7': 357, 'l8': 358, 'l9': 486, 'n_layers': 8}. Best is trial 2 with value: 0.8117300000000001.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'opt_Epochs': 1,\n",
+       " 'opt_Steps': 6,\n",
+       " 'opt_Learning_Rate': 0.01756754949978878,\n",
+       " 'opt_Batch_Size': 242,\n",
+       " 'opt_Number_of_Noise_Batches': 9,\n",
+       " 'opt_Regularization_term': 0.060799441872320475,\n",
+       " 'opt_Noise_Dim': 217,\n",
+       " 'l1': 618,\n",
+       " 'l2': 150,\n",
+       " 'l3': 962,\n",
+       " 'l4': 1000,\n",
+       " 'l5': 547,\n",
+       " 'l6': 432,\n",
+       " 'l7': 75,\n",
+       " 'l8': 768,\n",
+       " 'l9': 772,\n",
+       " 'n_layers': 4}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "study = optuna.create_study(study_name=\"GeneratorOpti\")\n",
     "study.optimize(objective, n_trials=5)\n",
@@ -224,26 +369,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n0 = 5000\n",
-    "n2 = 5000\n",
-    "batch_size = 128\n",
+    "# n0 = 5000\n",
+    "# n2 = 5000\n",
+    "# batch_size = 128\n",
     "\n",
-    "standard_model, standard_history = main(\n",
-    "    t_Epochs = 5,\n",
-    "    t_Steps= int((n0 + n2)/(2 * batch_size)), # The Idea is to have the same amount of updates as their are samples to unlearn\n",
-    "    t_Learning_Rate = 0.1,\n",
-    "    t_Batch_Size = batch_size,\n",
-    "    t_Number_of_Noise_Batches = 10,\n",
-    "    t_Regularization_term = 0.1,\n",
-    "    t_Layers = [1000],\n",
-    "    t_Noise_Dim = 100,\n",
-    "    new_baseline=True,\n",
-    "    logs=True,\n",
-    ")"
+    "# standard_model, standard_history = main(\n",
+    "#     t_Epochs = 5,\n",
+    "#     t_Steps= int((n0 + n2)/(2 * batch_size)), # The Idea is to have the same amount of updates as their are samples to unlearn\n",
+    "#     t_Learning_Rate = 0.1,\n",
+    "#     t_Batch_Size = batch_size,\n",
+    "#     t_Number_of_Noise_Batches = 10,\n",
+    "#     t_Regularization_term = 0.1,\n",
+    "#     t_Layers = [1000],\n",
+    "#     t_Noise_Dim = 100,\n",
+    "#     new_baseline=True,\n",
+    "#     logs=True,\n",
+    "# )"
    ]
   },
   {
@@ -255,9 +400,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from torchvision.models import resnet18\n",
     "import torch\n",
@@ -273,9 +429,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                 \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from src.metrics import kl_divergence_between_models\n",
     "import os\n",
@@ -299,18 +473,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                 \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kl_divergence_between_models(model1=exact, model2=exact, data_loader=valid_dl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                 \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.395605000000001"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kl_divergence_between_models(model1=train, model2=exact, data_loader=valid_dl)\n",
     "# 407764079971736.25"
@@ -318,9 +528,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                 \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.2414749999999994"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kl_divergence_between_models(model1=exact, model2=train, data_loader=valid_dl)\n",
     "# 336395501025684.5"
